[workspace]
members = ["plotters-piet"]

[package]
name = "plotters-druid"
version = "0.2.0"
edition = "2021"
authors = ["Pascal Sommer"]
license = "MIT OR Apache-2.0"
description = "Use Plottters as a Druid Widget"
repository = "https://github.com/Pascal-So/plotters-druid"
keywords = ["visualization", "plotters", "druid", "plot", "widget"]
categories = ["visualization", "gui"]
readme = "Readme.md"

[dependencies]
# Todo: wait for druid to release a version based on piet 0.5 or higher
druid = { git = "https://github.com/linebender/druid", rev = "fc05e965c85fced8720c655685e02478e0530e94" }
plotters-piet = {version = "0.3.1", path = "plotters-piet"}
plotters = "^0.3"
