[workspace]
members = ["plotters-piet"]

[package]
name = "plotters-druid"
version = "0.3.0"
edition = "2021"
authors = ["Pascal Sommer"]
license = "MIT OR Apache-2.0"
description = "Use Plotters as a Druid Widget"
repository = "https://github.com/Pascal-So/plotters-druid"
keywords = ["visualization", "plotters", "druid", "plot", "widget"]
categories = ["visualization", "gui"]
readme = "Readme.md"

[dependencies]
druid = "0.8.2"
plotters-piet = {version = "0.3.2", path = "plotters-piet"}
plotters = "^0.3"
