[package]
name = "plotters-piet"
edition = "2021"
authors = ["Pascal Sommer"]
license = "MIT OR Apache-2.0"
description = "A Piet backend for Plotters"
repository = "https://github.com/pascal-so/plotters-piet"
keywords = ["visualization", "plotters", "piet", "plot"]
categories = ["visualization"]
readme = "Readme.md"

# According to Plotters convention the major and minor version of all backends
# should follow the plotters-backend version.
# See https://docs.rs/plotters-backend/latest/plotters_backend/#compatibility-note
version = "0.3.0"

[dependencies]
piet-common = "0.3"
plotters-backend = "^0.3"

[dev-dependencies]
plotters = "^0.3"
piet-common = {version = "0.3", features = ["png"]}
